# cpu_usage_tracker

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.MD  cpuUsageTracker  cpuUsageTracker.c  makefile  others.c  others.h  valgrindRaport
Inc/: algorithm.h  main.h  mythreads.h  others.h  queue.h  threads.h
Src/: algorithm.c  main.c  mythreads.c  others.c  queue.c  threads.c
